Log:

To do: 
  - pre-init structs (ti9x_create_regular_content) rather than bzeros them.

- 19/04/2003, version 0.5.5:
	Added various varname translations (ASCII, ISO8859-1 and UTF-8).
	Some fields have been extended (trans[9] -> trans[17]) to store
	Unicode strings;
	tifiles_vartype2icon was missing.
	Some icons name was internationalized.
	
- 15/04/2003, version 0.5.4:
	Interface reworked for better consistency.
	Returns int instead of uint8_t for tifiles_folder/flash/idlist_type.
		
- 05/04/2003, version 0.5.3:
	Added a column to the TI73_CONST[] array (localized).
	The previous column is used as icon name (non localized).
	i18n enabled for Windows.
	indent -kr -i2
	
- 30/03/2003, version 0.5.2:
	i18n updated.
	Included French translations.
	Code source parsed for _() occurences.
	
- 18/03/2003, version 0.5.1 (testing phase):
	Fixed V200 types.
	Fixed TI83+ types (> instead of <).
	
- 09/03/2003, version 0.5.0:
        Added type to string conversion functions.
	
- 08/03/2003, version 0.4.9:
	Group files from FLASH calculators are not considered as backup any
	longer.
	
- 23/02/2003, version 0.4.8:
	Bug fix thanks to Kevin McCormick <kevmccor@risecom.net> :
	<<
	]       |5D00000000000000|L1      |0   |01  |0000006E|
	]       |5D01000000000000|L2      |0   |41  |00000146|>>
	there was no out-of-bounds protection in ti83p_byte2desc() and others.
	Tijl's workaround added about this (AND with 0x1f).
	
- 08/02/2003, version 0.4.7:
        Removed glib dependancy. tifiles library does not have any dep !
	Fixed macros.h for BSD.
	
- 08/02/2003, version 0.4.6:
	Bug report from Thomas Otto <3.1415926535897932384626433832@gmx.net>:
	<<$ mkdir testink
	$ mkfifo testink/fifo
	$ tilp #(gtk mode) and chanke into this dir -> freeze.>>
	Fixed by checking file type before opening the file in typesxx.c.
	Added .89y/.9xy extension for ppg variables (ebook).
	
- 03/02/2003, version 0.4.5:
	Some #define have been changed into enum (make code & doc better).
	