@@ -9,7 +9,7 @@ AC_INIT(src/intrface.c)
 # set library version number
 MAJOR_VERSION=0
 MINOR_VERSION=5
-MICRO_VERSION=5
+MICRO_VERSION=6
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
 
 AC_SUBST(MAJOR_VERSION)
