@@ -3,6 +3,10 @@ Log:
 To do: 
   - pre-init structs (ti9x_create_regular_content) rather than bzeros them.
 
+- 01/05/2003, version 0.5.6:
+	Added 'mu' char to TI89..V200. Unicode translation was missing for
+	TI92(+)/V200.
+	
 - 19/04/2003, version 0.5.5:
 	Added various varname translations (ASCII, ISO8859-1 and UTF-8).
 	Some fields have been extended (trans[9] -> trans[17]) to store
